Fix panel image cutoff on smaller devices

--- a/css/index.css
+++ b/css/index.css
@@ -122,3 +122,19 @@
     width: 10rem;
   }
 }
+
+@media (max-height: 800px) {
+  .hero-title {
+    font-size: 2.5rem;
+  }
+
+  .hero-description {
+    font-size: 1.2rem;
+  }
+
+  .hero-join-button {
+    font-size: 1.2rem;
+    padding: 0.6rem 0rem;
+    width: 10rem;
+  }
+}
